[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
axum-server = { version = "0.7", features = ["tls-rustls"] }
bcrypt = "0.16"
chrono = { version = "0.4", features = ["clock"] }
dotenvy = "0.15"
jsonwebtoken = "10"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
